--- a/Sorties/Views/Home/Index.cshtml
+++ b/Sorties/Views/Home/Index.cshtml
@@ -30,4 +30,4 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
-<div>Pouette Pouette </div>
+<div>Pouette Pouette  ggggrrrrrrrrrr</div>
